--- a/r_rac/1_rac_bream_all.Rmd
+++ b/r_rac/1_rac_bream_all.Rmd
@@ -60,7 +60,7 @@ for (i in sites){
 #generate Population.csv for each site
 for (i in sites){
   for (j in 0:(length(sites)-1)){
-    column <- j + 5
+    column <- j + 5 #!
     export <- population_prep %>% select(1, 2, column, 3, 4)}
     output <- paste0(rac_folder, 'site_', i, '/Bream_population/Inputs/Parameters/Population.csv')
     write.table(export, file = output, row.names=FALSE, col.names = FALSE, sep=",")}
@@ -138,7 +138,7 @@ for (i in sites){
 
 #generate Parameters.csv for each site 
 for (i in sites){
-  export <- parameters %>% select(1, 2, 6, 3, 4) #final parameters
+  export <- parameters %>% select(1, 2, 6, 3, 4) #6 final parameters
   output <- paste0(rac_folder, 'site_', i, '/Bream_population/Inputs/Parameters/Parameters.csv')
   write.table(export, file = output, row.names=FALSE, col.names = FALSE, sep=",")}
 
