SARry, one more time

--- a/python/detection_prep/0_prep.ipynb
+++ b/python/detection_prep/0_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "detections 10038 {'init': 'epsg:2100'}\n",
+      "detections 10617 {'init': 'epsg:2100'}\n",
       "search area 1 {'init': 'epsg:2100'}\n",
       "exclusion zones 15 {'init': 'epsg:2100'}\n"
      ]
@@ -36,7 +36,13 @@
    "source": [
     "#load data layers\n",
     "f = '/Users/Zack/0_seawarden/python/detection_prep/targets_sar/'\n",
-    "pts = gpd.read_file(f + 'greece_g25_100m_10-20_1yr_02-01.geojson')\n",
+    "\n",
+    "#n = '2019_g25_100m_10-20_6m_02-01'\n",
+    "#n = '2019_g25_100m_10-20_1yr_02-01'\n",
+    "#n = '2018_g25_100m_10-20_6m_02-02'\n",
+    "n = '2018_g25_100m_10-20_1yr_02-02'\n",
+    "\n",
+    "pts = gpd.read_file(f + n + '.geojson')\n",
     "\n",
     "f2 = '/Users/Zack/0_greece/'\n",
     "search_area = gpd.read_file(f2 + 'dem_eu/mask_search_area_100m_5km.shp')\n",
@@ -55,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -69,15 +75,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "detections within search area: 4381\n",
-      "Wall time: 2.33 s\n"
+      "detections within search area: 4540\n",
+      "Wall time: 2.43 s\n"
      ]
     }
    ],
@@ -90,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -103,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -112,7 +118,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 12 ms\n"
+      "Wall time: 0 ns\n"
      ]
     }
    ],
@@ -125,15 +131,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "detections outside of exclusion zones: 3410\n",
-      "Wall time: 244 ms\n"
+      "detections outside of exclusion zones: 3525\n",
+      "Wall time: 265 ms\n"
      ]
     }
    ],
@@ -147,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -160,14 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 347 ms\n"
+      "Wall time: 252 ms\n"
      ]
     }
    ],
@@ -181,15 +187,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "detections after aggregation: 3393\n",
-      "Wall time: 1.19 s\n"
+      "detections after aggregation: 3507\n",
+      "Wall time: 1.72 s\n"
      ]
     }
    ],
@@ -203,14 +209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 220 ms\n"
+      "Wall time: 207 ms\n"
      ]
     }
    ],
@@ -223,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -237,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {
     "scrolled": false
    },
@@ -251,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -288,23 +294,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>POLYGON ((24.11171960761776 34.78588650305428,...</td>\n",
+       "      <td>POLYGON ((24.1117194014751 34.78588604855375, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>POLYGON ((24.04763255938217 34.83998069447728,...</td>\n",
+       "      <td>POLYGON ((24.12551001425323 34.80271110336088,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>POLYGON ((24.11842996433019 34.8466659556764, ...</td>\n",
+       "      <td>POLYGON ((24.11842575993763 34.84667187731439,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>POLYGON ((24.04263212858888 34.8503289578795, ...</td>\n",
+       "      <td>POLYGON ((24.04262547882348 34.85034838207384,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>POLYGON ((24.03820188030516 34.85359059215452,...</td>\n",
+       "      <td>POLYGON ((24.03817278696284 34.85361676319124,...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -312,14 +318,14 @@
       ],
       "text/plain": [
        "                                            geometry\n",
-       "0  POLYGON ((24.11171960761776 34.78588650305428,...\n",
-       "1  POLYGON ((24.04763255938217 34.83998069447728,...\n",
-       "2  POLYGON ((24.11842996433019 34.8466659556764, ...\n",
-       "3  POLYGON ((24.04263212858888 34.8503289578795, ...\n",
-       "4  POLYGON ((24.03820188030516 34.85359059215452,..."
+       "0  POLYGON ((24.1117194014751 34.78588604855375, ...\n",
+       "1  POLYGON ((24.12551001425323 34.80271110336088,...\n",
+       "2  POLYGON ((24.11842575993763 34.84667187731439,...\n",
+       "3  POLYGON ((24.04262547882348 34.85034838207384,...\n",
+       "4  POLYGON ((24.03817278696284 34.85361676319124,..."
       ]
      },
-     "execution_count": 35,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -356,7 +362,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total coordinates (5 per detection): 16965\n"
+      "total coordinates (5 per detection): 17535\n"
      ]
     },
     {
@@ -388,32 +394,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>24.111719607617758</td>\n",
-       "      <td>34.78588650305428</td>\n",
+       "      <td>24.111719401475103</td>\n",
+       "      <td>34.78588604855375</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>24.11281263379254</td>\n",
-       "      <td>34.78588549505649</td>\n",
+       "      <td>24.112812427643906</td>\n",
+       "      <td>34.78588504055781</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>24.112813861547316</td>\n",
-       "      <td>34.78678726699709</td>\n",
+       "      <td>24.11281365539641</td>\n",
+       "      <td>34.78678681249847</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>24.111720823477043</td>\n",
-       "      <td>34.78678827502855</td>\n",
+       "      <td>24.111720617332125</td>\n",
+       "      <td>34.78678782052806</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>24.111719607617758</td>\n",
-       "      <td>34.78588650305428</td>\n",
+       "      <td>24.111719401475103</td>\n",
+       "      <td>34.78588604855375</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -422,14 +428,14 @@
       ],
       "text/plain": [
        "                    x                  y  id\n",
-       "0  24.111719607617758  34.78588650305428   0\n",
-       "1   24.11281263379254  34.78588549505649   0\n",
-       "2  24.112813861547316  34.78678726699709   0\n",
-       "3  24.111720823477043  34.78678827502855   0\n",
-       "4  24.111719607617758  34.78588650305428   0"
+       "0  24.111719401475103  34.78588604855375   0\n",
+       "1  24.112812427643906  34.78588504055781   0\n",
+       "2   24.11281365539641  34.78678681249847   0\n",
+       "3  24.111720617332125  34.78678782052806   0\n",
+       "4  24.111719401475103  34.78588604855375   0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -458,12 +464,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total detections: 10038\n",
-      "detections in search area: 3393\n",
+      "total detections: 10617\n",
+      "detections in search area: 3507\n",
       "farm sites: 218\n",
-      "matches: 294\n",
-      "positive matches 1.349\n",
-      "overall accuracy 0.087\n"
+      "matches: 300\n",
+      "positive matches 1.376\n",
+      "overall accuracy 0.086\n"
      ]
     }
    ],
@@ -494,12 +500,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 'g25_100m_10-20_02-01'\n",
-    "\n",
     "pts.to_file(f + n + '.shp')\n",
     "targets.to_csv(f + n + '.csv', index = None, header=True)\n",
     "\n",
